# video_encoding_fastapi

./: .gitignore  docker-compose.yml  requirements.txt
app/: alembic.ini  celery_app.py  celerybeat-schedule  main.py  pytest.ini
app/alembic/: env.py
app/alembic/versions/: 0a5d2f54a223_adding_encode_profile_details_in_video_.py  246d09f7967a_add_nullable_encoding_profiledetail.py  46bb2bef42ec_add_encoding_profiledetails_column_to_.py  477952827354_add_s3credentials_systemconfig_remove_.py  65708fcfe04a_describe_your_changes_here.py  66cc7250c32e_initial_schema.py  7cc111a26312_add_retry_count_drop_video_url.py  99ab936daa97_add_all_tables.py  9bfe9f7e5400_add_started_at_ended_at_and_video_url_.py  affd31695a94_remove_stream_url_from_user.py  d74dc531d9e4_add_retry_count_drop_video_url.py
app/project/: __init__.py  config.py  logging_config.py  permisson.py
app/project/auth/: auth.py
app/project/db/: database.py
app/project/event_listeners/: video_event_consumer.py
app/project/models/: encodeprofile.py  s3credentials.py  system_config.py  user.py  videojob.py
app/project/rbac/: pyproject.toml
app/project/rbac/permission/: permission.py  roles.py  utils.py
app/test/: conftest.py  test_encodeprofile.py  test_main.py  test_user.py  test_videojob.py
backend/: requirements.txt
backend/app/: celery_app.py  main.py  pytest.ini
compose/fastapi/: entrypoint  start
compose/nginx/: nginx.conf
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
(+125 files in other folders)
